WIP: add function to compile using a "sources" file