@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
-BUILD_ARTIFACTS_DIR="./build"
+BUILD_ARTIFACTS_BASE_DIR="./build"
 
 # Compile a list of all java files in the specified directories.
 # Parameters:
@@ -16,4 +16,19 @@ collect_sources() {
     for d in "${dirs[@]}"; do
         find "${d}" -type f -name "*.java" >> "${2}"
     done
+}
+
+# Compile a list of java files.
+# Parameters:
+#   $1 : sources.txt filepath
+#   $2 : classpath(s) according to javac "-cp"-format (e.g. "bin/:lib/*.jar:")
+#   $3 : output directory
+compile_file_list() {
+    if [[ $# -ne 3 ]]; then
+        echo "$# args received but expected 3"
+        return 1
+    fi
+    cmd="javac --enable-preview --source 23 --target 23 -cp \"${2}\" -d \"${3}\" @\"${1}\""
+    echo "${cmd}"
+    eval ${cmd}
 }
